spacing and where the boxes are fixed, added image as well

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,6 +8,9 @@
 @tailwind utilities;
 
 @layer base {
+    html {
+        @apply font-sans
+    }
     h1 {
         @apply font-heading
     }
